# Analysis_Algorithm-5

Code/1/: Lab_01_AA.sln  report_01.tex
Code/1/Debug/: Lab_01_AA.ilk
Code/1/Lab_01_AA/: Lab_01_AA.cpp  Lab_01_AA.vcxproj.filters  test.cpp  time.cpp  time.h
Code/4/: CMakeLists.txt  test.cpp
Code/4/tests/: out_1.txt  out_3.txt  out_6.txt
DZ1/: Code DZ1.txt  DZ Нгуен Ф. С. ИУ7-56Б.docx
Lab_1/Lab_01_AA/Lab_01_AA/: Lab_01_AA.vcxproj  levenshtein_dist.cpp  levenshtein_dist.h
Lab_1/Lab_01_AA/Lab_01_AA/Debug/: vc142.idb
Lab_1/report/: MatrixTime.csv  Time.csv  main.py  report_01.aux  report_01.toc  text.txt  time.py
Lab_2/: lab_2.py  Отчет лаб.раб 02. Нгуен Ф. С. ИУ7-56Б.docx
Lab_3/: Lab03_AA.py  Отчет лаб.раб 02. Нгуен Ф. С. ИУ7-56Б.docx  Отчет лаб.раб 03. Нгуен Ф. С. ИУ7-56Б.docx
Lab_4/: Lab_4.rar
Lab_4/XXX/: defs.py  lab_4.py  test.py  test_1.py  Отчет лаб.раб 04. Нгуен Ф. С. ИУ7-56Б.docx
Lab_4/report/: report_4.aux  report_4.tex  report_4.toc
Lab_4/tests/: in_5_0.txt  in_5_1.txt
Latex_Study/: ex.tex
RK1/: RK1.py  Отчет RK1. Нгуен Ф. С. ИУ7-56Б.docx
Tài Liệu/Algorithm-analysis-master/Algorithm-analysis-master/: README.md
Tài Liệu/Algorithm-analysis-master/Algorithm-analysis-master/lab04/src/: CMakeLists.txt  main.cpp  parallel_vinograd.cpp  parallel_vinograd.h  test.cpp
Tài Liệu/IU7-Analysis-of-Algorithms-master/IU7-Analysis-of-Algorithms-master/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
Tài Liệu/IU7-Analysis-of-Algorithms-master/IU7-Analysis-of-Algorithms-master/graph/: code.cpp
Tài Liệu/IU7-Analysis-of-Algorithms-master/IU7-Analysis-of-Algorithms-master/lab_01/: CMakeLists.txt  leven.cpp  leven.hpp  main.cpp  test.cpp  time.cpp
Tài Liệu/IU7-Analysis-of-Algorithms-master/IU7-Analysis-of-Algorithms-master/lab_01/report/: DamerauTime.csv  MatrixTime.csv  damleven.graphml  damleven_r.graphml  leven.graphml  report_01.tex
Tài Liệu/IU7-Analysis-of-Algorithms-master/IU7-Analysis-of-Algorithms-master/lab_02/: CMakeLists.txt  main.cpp  mamult.cpp  mamult.hpp  matrix.cpp  matrix.hpp  test.cpp  time.cpp
Tài Liệu/IU7-Analysis-of-Algorithms-master/IU7-Analysis-of-Algorithms-master/lab_02/report/: EvenTime.csv  OddTime.csv  classic.graphml  report_2.tex  vin.graphml  vin_opt.graphml
Tài Liệu/IU7-Analysis-of-Algorithms-master/IU7-Analysis-of-Algorithms-master/lab_02/tests/: in_1_1.txt  in_3_0.txt  in_4_0.txt
Tài Liệu/IU7-Analysis-of-Algorithms-master/IU7-Analysis-of-Algorithms-master/lab_03/: CMakeLists.txt  array.cpp  array.hpp  main.cpp  test.cpp  time.cpp
Tài Liệu/IU7-Analysis-of-Algorithms-master/IU7-Analysis-of-Algorithms-master/lab_03/report/: AscTime.csv  DescTime.csv  RandTime.csv  SortTime.csv  insert.graphml  merge.graphml  quick.graphml  report_3.tex
Tài Liệu/IU7-Analysis-of-Algorithms-master/IU7-Analysis-of-Algorithms-master/lab_04/: main.cpp
Tài Liệu/IU7-Analysis-of-Algorithms-master/IU7-Analysis-of-Algorithms-master/lab_06/: aco.cpp  bf.cpp  bf.hpp  graph.cpp  graph.hpp
Tài Liệu/IU7-Analysis-of-Algorithms-master/IU7-Analysis-of-Algorithms-master/lab_07/: CMakeLists.txt  main.cpp  substr.cpp  substr.hpp  test.cpp  time.cpp
Tài Liệu/IU7-Analysis-of-Algorithms-master/IU7-Analysis-of-Algorithms-master/lab_07/report/: bm.graphml  fail.graphml  kmp.graphml  report_7.tex  slide.graphml  time.csv
Tài Liệu/IU7-Analysis-of-Algorithms-master/IU7-Analysis-of-Algorithms-master/rk_01/: canvas.cpp  canvas.h  fractal.cpp  fractal.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  painter.cpp  painter.h  point.cpp  point.h  rk_01.qbs
Tài Liệu/IU7-Analysis-of-Algorithms-master/IU7-Analysis-of-Algorithms-master/rk_02/: ka.py  main.py  regular.py
lab_05/: CMakeLists.txt  lab_05.rar
lab_05/report/: report_05.aux  report_05.tex  report_05.toc
lab_06/: aco.hpp  lab_06.rar  test.cpp
lab_06/report/: aco.graphml  report_06.aux  report_06.tex  report_06.toc  result.csv
lab_07/: report.toc  report_7.aux  report_7.tex
lab_07/bmstu_analyseAlg-master/bmstu_analyseAlg-master/: .gitignore
lab_07/bmstu_analyseAlg-master/bmstu_analyseAlg-master/lab_01/: program.py  report.tex
lab_07/bmstu_analyseAlg-master/bmstu_analyseAlg-master/lab_02/: program.py  report.tex
(+87 files in other folders)
